@startuml Class Diagram
title Smart Tile System - Class Diagram

' Style definitions
skinparam class {
    BackgroundColor white
    ArrowColor #666666
    BorderColor #666666
}

package "Coordinator" {
    class Coordinator {
        -espNow: EspNow*
        -mqtt: Mqtt*
        -mmWave: MmWave*
        -nodes: NodeRegistry*
        -zones: ZoneControl*
        -buttons: ButtonControl*
        -thermal: ThermalControl*
        +begin(): bool
        +loop(): void
        -onMmWaveEvent()
        -onThermalEvent()
        -onButtonEvent()
    }

    class MmWave {
        -eventCallback: function
        -currentZone: String
        -currentPresence: bool
        +begin(): bool
        +loop(): void
        +setEventCallback()
        -processSerialData()
    }

    class ThermalControl {
        -nodeTemperatures: map
        -globalDerateStartTemp: float
        -globalDerateMaxTemp: float
        +updateNodeTemperature()
        +getNodeDerationLevel()
        +setNodeThermalLimits()
    }

    class NodeRegistry {
        -nodes: map
        -lightToNode: map
        -pairingActive: bool
        +registerNode()
        +processPairingRequest()
        +getNodeForLight()
    }

    class ZoneControl {
        -zoneToLights: map
        -lightToZones: map
        -lightStates: map
        +addZone()
        +getLightsForZone()
        +isLightActive()
    }
}

package "Node" {
    class SmartTileNode {
        -state: NodeState
        -ledController: LedController
        -tempSensor: TempSensor
        -powerManager: PowerManager
        +begin(): bool
        +loop(): void
        -handleCommand()
    }

    class LedController {
        -strip: NeoPixel
        -currentBrightness: uint8_t
        -targetBrightness: uint8_t
        +setBrightness()
        +setColor()
        +update()
    }

    class TempSensor {
        -config: Config
        -currentTemp: float
        +update()
        +getDeratedDuty()
    }

    class PowerManager {
        -lastRxWindow: uint32_t
        +enterSleep()
        +scheduleWakeup()
    }
}

package "Shared" {
    class EspNowMessage {
        +type: MessageType
        +msg: String
        +cmd_id: String
        +timestamp: uint32_t
        +{abstract} toJson()
        +{abstract} fromJson()
    }

    class ConfigManager {
        +loadConfig()
        +saveConfig()
        +getParameter()
    }
}

' Relationships
Coordinator --> EspNow
Coordinator --> Mqtt
Coordinator --> MmWave
Coordinator --> NodeRegistry
Coordinator --> ZoneControl
Coordinator --> ThermalControl

SmartTileNode --> LedController
SmartTileNode --> TempSensor
SmartTileNode --> PowerManager
SmartTileNode --> ConfigManager

SmartTileNode ..> EspNowMessage
Coordinator ..> EspNowMessage

@enduml
